@@ -1,5 +1,6 @@
 package com.c4soft.springaddons.tutorials;
 
+import static org.springframework.security.config.Customizer.withDefaults;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.Collection;
@@ -7,16 +8,16 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.jspecify.annotations.NonNull;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.autoconfigure.web.ServerProperties;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.boot.context.properties.NestedConfigurationProperty;
+import org.springframework.boot.web.server.autoconfigure.ServerProperties;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
-import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationManagerResolver;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -33,7 +34,7 @@ import org.springframework.security.oauth2.server.resource.authentication.JwtAut
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.security.oauth2.server.resource.authentication.JwtIssuerAuthenticationManagerResolver;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
+import org.springframework.security.web.servlet.util.matcher.PathPatternRequestMatcher;
 import org.springframework.stereotype.Component;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -48,174 +49,184 @@ import lombok.RequiredArgsConstructor;
 @Configuration
 public class WebSecurityConfig {
 
-	@Bean
-	SecurityFilterChain filterChain(
-			HttpSecurity http,
-			ServerProperties serverProperties,
-			@Value("${origins:[]}") String[] origins,
-			@Value("${permit-all:[]}") String[] permitAll,
-			AuthenticationManagerResolver<HttpServletRequest> authenticationManagerResolver)
-			throws Exception {
+  @Bean
+  SecurityFilterChain filterChain(HttpSecurity http, ServerProperties serverProperties,
+      @Value("${origins:}") String[] origins, @Value("${permit-all:}") String[] permitAll,
+      AuthenticationManagerResolver<HttpServletRequest> authenticationManagerResolver)
+      throws Exception {
 
-		http.oauth2ResourceServer(oauth2 -> oauth2.authenticationManagerResolver(authenticationManagerResolver));
+    http.oauth2ResourceServer(
+        oauth2 -> oauth2.authenticationManagerResolver(authenticationManagerResolver));
 
-		// Enable and configure CORS
-		http.cors(cors -> cors.configurationSource(corsConfigurationSource(origins)));
+    // Enable and configure CORS
+    http.cors(cors -> cors.configurationSource(corsConfigurationSource(origins)));
 
-		// State-less session (state in access-token only)
-		http.sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+    // State-less session (state in access-token only)
+    http.sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
-		// Disable CSRF because of state-less session-management
-		http.csrf(csrf -> csrf.disable());
+    // Disable CSRF because of state-less session-management
+    http.csrf(csrf -> csrf.disable());
 
-		// Return 401 (unauthorized) instead of 302 (redirect to login) when
-		// authorization is missing or invalid
-		http.exceptionHandling(eh -> eh.authenticationEntryPoint((request, response, authException) -> {
-			response.addHeader(HttpHeaders.WWW_AUTHENTICATE, "Bearer realm=\"Restricted Content\"");
-			response.sendError(HttpStatus.UNAUTHORIZED.value(), HttpStatus.UNAUTHORIZED.getReasonPhrase());
-		}));
+    // Return 401 (unauthorized) instead of 302 (redirect to login) when
+    // authorization is missing or invalid
+    http.exceptionHandling(eh -> eh.authenticationEntryPoint((request, response, authException) -> {
+      response.addHeader(HttpHeaders.WWW_AUTHENTICATE, "Bearer realm=\"Restricted Content\"");
+      response.sendError(HttpStatus.UNAUTHORIZED.value(),
+          HttpStatus.UNAUTHORIZED.getReasonPhrase());
+    }));
 
-		// If SSL enabled, disable http (https only)
-		if (serverProperties.getSsl() != null && serverProperties.getSsl().isEnabled()) {
-			http.requiresChannel(channel -> channel.anyRequest().requiresSecure());
-		}
+    // If SSL enabled, disable http (https only)
+    if (serverProperties.getSsl() != null && serverProperties.getSsl().isEnabled()) {
+      http.redirectToHttps(withDefaults());
+    }
 
-		// @formatter:off
+    // @formatter:off
         http.authorizeHttpRequests(requests -> requests
-            .requestMatchers(Stream.of(permitAll).map(AntPathRequestMatcher::new).toArray(AntPathRequestMatcher[]::new)).permitAll()
+            .requestMatchers(Stream.of(permitAll).map(PathPatternRequestMatcher::pathPattern).toArray(PathPatternRequestMatcher[]::new)).permitAll()
             .anyRequest().authenticated());
         // @formatter:on
 
-		return http.build();
-	}
+    return http.build();
+  }
 
-	private UrlBasedCorsConfigurationSource corsConfigurationSource(String[] origins) {
-		final var configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList(origins));
-		configuration.setAllowedMethods(List.of("*"));
-		configuration.setAllowedHeaders(List.of("*"));
-		configuration.setExposedHeaders(List.of("*"));
+  private UrlBasedCorsConfigurationSource corsConfigurationSource(String[] origins) {
+    final var configuration = new CorsConfiguration();
+    configuration.setAllowedOrigins(Arrays.asList(origins));
+    configuration.setAllowedMethods(List.of("*"));
+    configuration.setAllowedHeaders(List.of("*"));
+    configuration.setExposedHeaders(List.of("*"));
 
-		final var source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", configuration);
-		return source;
-	}
+    final var source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", configuration);
+    return source;
+  }
 
-	@Data
-	@Configuration
-	@ConfigurationProperties(prefix = "spring-addons")
-	static class SpringAddonsProperties {
-		private IssuerProperties[] issuers = {};
+  @Data
+  @Configuration
+  @ConfigurationProperties(prefix = "spring-addons")
+  static class SpringAddonsProperties {
+    private IssuerProperties[] issuers = {};
 
-		@Data
-		static class IssuerProperties {
-			private URL uri;
+    @Data
+    static class IssuerProperties {
+      private URL uri;
 
-			@NestedConfigurationProperty
-			private ClaimMappingProperties[] claims;
+      @NestedConfigurationProperty
+      private ClaimMappingProperties[] claims;
 
-			private String usernameJsonPath = JwtClaimNames.SUB;
+      private String usernameJsonPath = JwtClaimNames.SUB;
 
-			@Data
-			static class ClaimMappingProperties {
-				private String jsonPath;
-				private CaseProcessing caseProcessing = CaseProcessing.UNCHANGED;
-				private String prefix = "";
+      @Data
+      static class ClaimMappingProperties {
+        private String jsonPath;
+        private CaseProcessing caseProcessing = CaseProcessing.UNCHANGED;
+        private String prefix = "";
 
-				static enum CaseProcessing {
-					UNCHANGED, TO_LOWER, TO_UPPER
-				}
-			}
-		}
+        static enum CaseProcessing {
+          UNCHANGED, TO_LOWER, TO_UPPER
+        }
+      }
+    }
 
-		public IssuerProperties get(URL issuerUri) throws MisconfigurationException {
-			final var issuerProperties = Stream.of(issuers).filter(iss -> issuerUri.equals(iss.getUri())).toList();
-			if (issuerProperties.size() == 0) {
-				throw new MisconfigurationException("Missing authorities mapping properties for %s".formatted(issuerUri.toString()));
-			}
-			if (issuerProperties.size() > 1) {
-				throw new MisconfigurationException("Too many authorities mapping properties for %s".formatted(issuerUri.toString()));
-			}
-			return issuerProperties.get(0);
-		}
+    public IssuerProperties get(URL issuerUri) throws MisconfigurationException {
+      final var issuerProperties =
+          Stream.of(issuers).filter(iss -> issuerUri.equals(iss.getUri())).toList();
+      if (issuerProperties.size() == 0) {
+        throw new MisconfigurationException(
+            "Missing authorities mapping properties for %s".formatted(issuerUri.toString()));
+      }
+      if (issuerProperties.size() > 1) {
+        throw new MisconfigurationException(
+            "Too many authorities mapping properties for %s".formatted(issuerUri.toString()));
+      }
+      return issuerProperties.get(0);
+    }
 
-		static class MisconfigurationException extends RuntimeException {
-			private static final long serialVersionUID = 5887967904749547431L;
+    static class MisconfigurationException extends RuntimeException {
+      private static final long serialVersionUID = 5887967904749547431L;
 
-			public MisconfigurationException(String msg) {
-				super(msg);
-			}
-		}
-	}
+      public MisconfigurationException(String msg) {
+        super(msg);
+      }
+    }
+  }
 
-	@RequiredArgsConstructor
-	static class JwtGrantedAuthoritiesConverter implements Converter<Jwt, Collection<? extends GrantedAuthority>> {
-		private final SpringAddonsProperties.IssuerProperties properties;
+  @RequiredArgsConstructor
+  static class JwtGrantedAuthoritiesConverter
+      implements Converter<Jwt, Collection<? extends GrantedAuthority>> {
+    private final SpringAddonsProperties.IssuerProperties properties;
 
-		@Override
-		@SuppressWarnings({ "rawtypes", "unchecked" })
-		public Collection<? extends GrantedAuthority> convert(@NonNull Jwt jwt) {
-			return Stream.of(properties.claims).flatMap(claimProperties -> {
-				Object claim;
-				try {
-					claim = JsonPath.read(jwt.getClaims(), claimProperties.jsonPath);
-				} catch (PathNotFoundException e) {
-					claim = null;
-				}
-				if (claim == null) {
-					return Stream.empty();
-				}
-				if (claim instanceof String claimStr) {
-					return Stream.of(claimStr.split(","));
-				}
-				if (claim instanceof String[] claimArr) {
-					return Stream.of(claimArr);
-				}
-				if (Collection.class.isAssignableFrom(claim.getClass())) {
-					final var iter = ((Collection) claim).iterator();
-					if (!iter.hasNext()) {
-						return Stream.empty();
-					}
-					final var firstItem = iter.next();
-					if (firstItem instanceof String) {
-						return (Stream<String>) ((Collection) claim).stream();
-					}
-					if (Collection.class.isAssignableFrom(firstItem.getClass())) {
-						return (Stream<String>) ((Collection) claim).stream().flatMap(colItem -> ((Collection) colItem).stream()).map(String.class::cast);
-					}
-				}
-				return Stream.empty();
-			}).map(SimpleGrantedAuthority::new).map(GrantedAuthority.class::cast).toList();
-		}
-	}
+    @Override
+    @SuppressWarnings({"rawtypes", "unchecked"})
+    public Collection<? extends GrantedAuthority> convert(@NonNull Jwt jwt) {
+      return Stream.of(properties.claims).flatMap(claimProperties -> {
+        Object claim;
+        try {
+          claim = JsonPath.read(jwt.getClaims(), claimProperties.jsonPath);
+        } catch (PathNotFoundException e) {
+          claim = null;
+        }
+        if (claim == null) {
+          return Stream.empty();
+        }
+        if (claim instanceof String claimStr) {
+          return Stream.of(claimStr.split(","));
+        }
+        if (claim instanceof String[] claimArr) {
+          return Stream.of(claimArr);
+        }
+        if (Collection.class.isAssignableFrom(claim.getClass())) {
+          final var iter = ((Collection) claim).iterator();
+          if (!iter.hasNext()) {
+            return Stream.empty();
+          }
+          final var firstItem = iter.next();
+          if (firstItem instanceof String) {
+            return (Stream<String>) ((Collection) claim).stream();
+          }
+          if (Collection.class.isAssignableFrom(firstItem.getClass())) {
+            return (Stream<String>) ((Collection) claim).stream()
+                .flatMap(colItem -> ((Collection) colItem).stream()).map(String.class::cast);
+          }
+        }
+        return Stream.empty();
+      }).map(SimpleGrantedAuthority::new).map(GrantedAuthority.class::cast).toList();
+    }
+  }
 
-	@Component
-	@RequiredArgsConstructor
-	static class SpringAddonsJwtAuthenticationConverter implements Converter<Jwt, JwtAuthenticationToken> {
-		private final SpringAddonsProperties springAddonsProperties;
+  @Component
+  @RequiredArgsConstructor
+  static class SpringAddonsJwtAuthenticationConverter
+      implements Converter<Jwt, JwtAuthenticationToken> {
+    private final SpringAddonsProperties springAddonsProperties;
 
-		@Override
-		public JwtAuthenticationToken convert(@NonNull Jwt jwt) {
-			final var issuerProperties = springAddonsProperties.get(jwt.getIssuer());
-			final var authorities = new JwtGrantedAuthoritiesConverter(issuerProperties).convert(jwt);
-			final String username = JsonPath.read(jwt.getClaims(), issuerProperties.getUsernameJsonPath());
-			return new JwtAuthenticationToken(jwt, authorities, username);
-		}
-	}
+    @Override
+    public JwtAuthenticationToken convert(@NonNull Jwt jwt) {
+      final var issuerProperties = springAddonsProperties.get(jwt.getIssuer());
+      final var authorities = new JwtGrantedAuthoritiesConverter(issuerProperties).convert(jwt);
+      final String username =
+          JsonPath.read(jwt.getClaims(), issuerProperties.getUsernameJsonPath());
+      return new JwtAuthenticationToken(jwt, authorities, username);
+    }
+  }
 
-	@Bean
-	AuthenticationManagerResolver<HttpServletRequest>
-			authenticationManagerResolver(SpringAddonsProperties addonsProperties, SpringAddonsJwtAuthenticationConverter authenticationConverter) {
-		final Map<String, AuthenticationManager> authenticationProviders =
-				Stream.of(addonsProperties.getIssuers()).map(SpringAddonsProperties.IssuerProperties::getUri).map(URL::toString)
-						.collect(Collectors.toMap(issuer -> issuer, issuer -> authenticationProvider(issuer, authenticationConverter)::authenticate));
-		return new JwtIssuerAuthenticationManagerResolver((AuthenticationManagerResolver<String>) authenticationProviders::get);
-	}
+  @Bean
+  AuthenticationManagerResolver<HttpServletRequest> authenticationManagerResolver(
+      SpringAddonsProperties addonsProperties,
+      SpringAddonsJwtAuthenticationConverter authenticationConverter) {
+    final Map<String, AuthenticationManager> authenticationProviders = Stream
+        .of(addonsProperties.getIssuers()).map(SpringAddonsProperties.IssuerProperties::getUri)
+        .map(URL::toString).collect(Collectors.toMap(issuer -> issuer,
+            issuer -> authenticationProvider(issuer, authenticationConverter)::authenticate));
+    return new JwtIssuerAuthenticationManagerResolver(
+        (AuthenticationManagerResolver<String>) authenticationProviders::get);
+  }
 
-	JwtAuthenticationProvider authenticationProvider(String issuer, SpringAddonsJwtAuthenticationConverter authenticationConverter) {
-		JwtDecoder decoder = JwtDecoders.fromIssuerLocation(issuer);
-		var provider = new JwtAuthenticationProvider(decoder);
-		provider.setJwtAuthenticationConverter(authenticationConverter);
-		return provider;
-	}
+  JwtAuthenticationProvider authenticationProvider(String issuer,
+      SpringAddonsJwtAuthenticationConverter authenticationConverter) {
+    JwtDecoder decoder = JwtDecoders.fromIssuerLocation(issuer);
+    var provider = new JwtAuthenticationProvider(decoder);
+    provider.setJwtAuthenticationConverter(authenticationConverter);
+    return provider;
+  }
 }
